updates to Module 6.3 bioSite layout.

--- a/hobbies.html
+++ b/hobbies.html
@@ -2,7 +2,7 @@
 <!DOCTYPE HTML>
 <html lang="en">
 <head>
-    <title>bioSite:Hobbites</title>
+    <title>bioSite:Hobbies</title>
     <link rel="stylesheet" href = "bioSiteStyle.css"  type = "text/css" >
 </head>
 
@@ -12,16 +12,16 @@
 </header>
 
 <div id="navbar">
-        <a href = "#index.html">Home</a>
-        <a href = "#about.html">About</a>
-        <a href = "#hobbies.html">Hobbies</a>
+    <a href = "index.html">Home</a>
+    <a href = "about.html">About</a>
+    <a href = "hobbies.html">Hobbies</a>
 </div>
 <body>
-
+<p>Style in progress</p>
 </body>
 
 <footer>
-    
+
 </footer>
 
 </html>
