--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- Jaci Brown || CSD 340 || Mod 6.3-->
+<!-- Jaci Brown || CSD 340 || Mod 6.3 bioSite Landing Page-->
 <!DOCTYPE HTML>
 <html lang="en">
 <head>
@@ -12,9 +12,9 @@
 </header>
 
 <div id="navbar">
-        <a href = "#index.html">Home</a>
-        <a href = "#about.html">About</a>
-        <a href = "#hobbies.html">Hobbies</a>
+        <a href = "index.html">Home</a>
+        <a href = "about.html">About</a>
+        <a href = "hobbies.html">Hobbies</a>
 </div>
 
 <body>
