Update format of containers, footer

--- a/index.html
+++ b/index.html
@@ -6,24 +6,24 @@
     <link rel="stylesheet" href = "bioSiteStyle.css"  type = "text/css" >
 </head>
 
-<header id = "header">
-    <img src="images/banner_Ocean.jpg" alt="Image of ocean from Navy vessel.">
-    
-</header>
 
-<div id="navbar">
+
+<body>
+    <header id = "header">
+        <img src="images/banner_Ocean.jpg" alt="Image of ocean from Navy vessel.">
+        
+    </header>
+    <div id="navbar">
         <a href = "index.html">Home</a>
         <a href = "about.html">About</a>
         <a href = "hobbies.html">Hobbies</a>
 </div>
-
-<body>
-    <div id="container">
+    <div class="container">
         <div id="card">
-            <div id = "card-title"></div>
-            <div id = "card-content"></div>
+            <div class = "card-title"></div>
+            <div class = "card-content"></div>
         </div><!--card div-->
-        <div id="card_blurb">
+        <div class="card_blurb">
             <h2>Topic- Style in progress.</h2>
             <p>Test Text Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
                 labore et dolore magna aliqua. Non curabitur gravida arcu ac tortor dignissim convallis aenean. 
@@ -32,23 +32,22 @@
         </div><!-- card blurb div-->
     </div><!-- div 1- first element of content-->
 
-    <div id = "container">
-        <div id="card2">
-            <div id = "card-title"></div>
-            <div id = "card-content"></div>
-        </div><!--card div-->
-        <div id="card_blurb2">
+    <div class = "container">
+        <div class="card2">
+            <figure>
+                <img src ="images//cyber_security.jpg" alt ="Image reflecting cyber security."
+                <figcaption> Cyber Security</figcaption>
+            </figure>  
+        </div><!--card 2 div-->
+        <div class="card_blurb2">
             <h2>Topic</h2>
             <p>Test Text</p>
         </div><!-- card blurb div-->
     </div><!-- div 2- second element of content-->
 
-
+    <div id= "footer">
+        <a href = "index.html">Return to home page</a>
+        </div>
 </body>
-
-
-<footer>
-<p></p>
-</footer>
 
 </html>
