Containers fit content with hidden overflow.

--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <link rel="stylesheet" href = "bioSiteStyle.css"  type = "text/css" >
 </head>
 
-
-
 <body>
     <header id = "header">
         <img src="images/banner_Ocean.jpg" alt="Image of ocean from Navy vessel.">
@@ -17,37 +15,44 @@
         <a href = "index.html">Home</a>
         <a href = "about.html">About</a>
         <a href = "hobbies.html">Hobbies</a>
-</div>
+    </div>
+    <!-- __________________________________________________________ -->
     <div class="container">
-        <div id="card">
-            <div class = "card-title"></div>
-            <div class = "card-content"></div>
+        <div class="card">
+            <figure>
+                <img src="images/Navy.png" alt="The US Navy Seal.">
+                <figcaption>US Navy</figcaption>
+            </figure>
         </div><!--card div-->
         <div class="card_blurb">
             <h2>Topic- Style in progress.</h2>
-            <p>Test Text Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
+            <p>Card blurb Test Text Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
                 labore et dolore magna aliqua. Non curabitur gravida arcu ac tortor dignissim convallis aenean. 
                 Pharetra pharetra massa massa ultricies mi quis. Suspendisse ultrices gravida dictum fusce ut placerat
                  orci nulla pellentesque. Pretium viverra suspendisse potenti nullam ac tortor vitae purus.</p>
         </div><!-- card blurb div-->
     </div><!-- div 1- first element of content-->
 
+    <!-- __________________________________________________________ -->
     <div class = "container">
         <div class="card2">
             <figure>
-                <img src ="images//cyber_security.jpg" alt ="Image reflecting cyber security."
-                <figcaption> Cyber Security</figcaption>
+                <img src ="images//cyber_security.jpg" alt ="Image reflecting cyber security.">
+                <figcaption> Cyber Security figcap</figcaption>
             </figure>  
         </div><!--card 2 div-->
         <div class="card_blurb2">
             <h2>Topic</h2>
-            <p>Test Text</p>
+            <p>Card blurb Test Text Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
+                labore et dolore magna aliqua. Non curabitur gravida arcu ac tortor dignissim convallis aenean. 
+                Pharetra pharetra massa massa ultricies mi quis. Suspendisse ultrices gravida dictum fusce ut placerat
+                 orci nulla pellentesque. Pretium viverra suspendisse potenti nullam ac tortor vitae purus.</p>
         </div><!-- card blurb div-->
     </div><!-- div 2- second element of content-->
 
-    <div id= "footer">
-        <a href = "index.html">Return to home page</a>
-        </div>
+<div id= "footer">
+    <a href = "index.html">Return to home page</a>
+</div>
 </body>
 
 </html>
