Adding all nodes to all pages.

--- a/about.html
+++ b/about.html
@@ -16,13 +16,37 @@
     <a href = "about.html">About</a>
     <a href = "hobbies.html">Hobbies</a>
 </div>
-<body><p>Style in progress</p>
+<body>
+    <div class = "longText">
+    <figure class = "card img"><img src ="images/portrait_wayne_brown_small.jpg" alt = "Wayne in inflatable dinosaur costume."></figure>
+        <p>Wayne Brown is a married man with one child. He also happens to be my husband.
+        He enjoys playing video games, tabletop games, reading, and watching tv. He is excellent
+        at dad jokes and troubleshooting. He is from the same hometown as me.
+        </p>
+        <p>He was in the US Navy for 6 years before returning 'home' to the Southeastern US.
+        His family started shortly after entering the Navy and grew to include one more during that
+        time. Since then, he has obtained a bachelor's degree in information technology, and will
+        have a master's in cyber security before 2024 year-end. All his post military education was
+        paid for by a benefit of military service known as the Montgomery GI Bill.
+        </p>
+        <p>Currently for work, Wayne installs and maintains security systems for local
+        business chains in the state. This includes security cameras, safe repair, and lock box
+        unlocking. When he is not busy with work and school, he enjoys spending time with his
+        family or enjoying a nice hobby.</p>
+        <figure class = "card2" ><img src = "images/good_pupper.jpg" alt ="Yellow lab waiting attentively for toy to be thrown."></figure>
+        <p>Wayne's current hobbies include online gaming, reading, and watching tv. If he had
+        an unlimited budget for hobbies, he would likely have a metal forge and a wood shop. One
+        of his favorite books of all time is The Hitch-hiker's Guide to The Galaxy by Douglas Adams.
+        One of his favorite tv shows is Doctor Who from BBC America.</p>
+        <p>Overall, Wayne is an excellent husband, father, and a well-rounded human. He
+        enjoys making people laugh and playing with puppies.</p>
+    </p>
+</div>
 
-
+<div id= "footer">
+    <a href = "index.html">Return to home page</a>
+</div>
 
 </body>
 
-<footer>
-
-</footer>
 </html>
