--- a/hobbies.html
+++ b/hobbies.html
@@ -17,11 +17,55 @@
     <a href = "hobbies.html">Hobbies</a>
 </div>
 <body>
-<p>Style in progress</p>
+    <!-- Three hobbies in separate containers.Each holding a card and blurb. -->
+<div class = "container">
+    <div class = "card">
+        <figure>
+            <img src = "images/hGG.jpg" alt = "Hitch-Hikers Guide to the Galaxy book cover">
+            <figcaption>The Hitch-Hiker's Guide to the Galaxy</figcaption>
+        </figure>
+    </div>
+    <div class = "card_blurb">
+        <h2> Reading </h2>
+        <p>Wayne enjoys reading science fiction/fantasy. Some of his favorites are the Hitch-Hiker's 
+            Guide to the Galaxy, the Eragon Series, and anything by Brandon Sanderson.</p>
+    </div>
+</div> 
+
+<div class = "container">
+    <div class = "card2">
+        <figure>
+            <img src="images//fable_xbox.jpg">
+            <figcaption> Fable cover from original XBox</figcaption>
+        </figure>
+    </div>
+    <div class = "card_blurb2">
+        <h2>Video Games</h2>
+        <p> Wayne was asked what his all time favorite video game was, as he's been playing since childhood. He responded with <i>Fable</i>
+            for original XBox or Sid Meiers <i>Pirates</i> for the original NES. While he holds a soft spot for the classics, he
+            currently plays a lot of <i>Modern Warfare 3</i> online, to keep in touch with friends spread across the US. 
+        </p>
+    </div> 
+</div> 
+<div class = "container">
+    <div class = "card">
+        <figure>
+            <img src = "images/boys_jump.jpg" alt = "Father and son jumping over seams in tile floor.">
+            <figcaption>Jumping over cracks</figcaption>
+        </figure>
+    </div>
+    <div class = "card_blurb">
+        <h2>Family Time</h2>
+        <p>While life can be busy with work and/or school, Wayne prioritzes hanging out with his family.
+            From bonfires and smores, to waterballon fights, he strives to keep his family laughing. 
+            The family loves trying and/or making new pizza together, playing with dogs, and playing Minecraft.  
+        </p>
+    </div>
+</div> 
+
+<div id= "footer">
+    <a href = "index.html">Return to home page</a>
+</div>
+
 </body>
-
-<footer>
-
-</footer>
-
 </html>
