--- a/index.html
+++ b/index.html
@@ -49,7 +49,18 @@
                  orci nulla pellentesque. Pretium viverra suspendisse potenti nullam ac tortor vitae purus.</p>
         </div><!-- card blurb div-->
     </div><!-- div 2- second element of content-->
-
+    <div class="container">
+        <div class = "card">
+            <figure>
+                <img>
+                <figcaption></figcaption>
+            </figure>
+        </div><!-- .. end card -->
+        <div class = "card_blurb">
+            <h2>title</h2>
+            <p>Lorem Ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+    </div>
 <div id= "footer">
     <a href = "index.html">Return to home page</a>
 </div>
