Added text for home page

--- a/index.html
+++ b/index.html
@@ -21,15 +21,16 @@
         <div class="card">
             <figure>
                 <img src="images/Navy.png" alt="The US Navy Seal.">
-                <figcaption>US Navy</figcaption>
+                <figcaption><a href = "https://www.history.navy.mil/browse-by-topic/commemorations-toolkits/navy-birthday/Navylogos.html">US Navy Seal</a></figcaption>
             </figure>
         </div><!--card div-->
         <div class="card_blurb">
-            <h2>Topic- Style in progress.</h2>
-            <p>Card blurb Test Text Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
-                labore et dolore magna aliqua. Non curabitur gravida arcu ac tortor dignissim convallis aenean. 
-                Pharetra pharetra massa massa ultricies mi quis. Suspendisse ultrices gravida dictum fusce ut placerat
-                 orci nulla pellentesque. Pretium viverra suspendisse potenti nullam ac tortor vitae purus.</p>
+            <h2>Military Service</h2>
+            <p>Wayne considers his military service a cornerstone of his current life. His absence in his hometown for the initial 
+                training left a gap in many hearts. Countless letters to and from home helped remind him that his conditions were 
+                temporary. After initial training, he proposed to a former roommate, and his previous life joined his new. His 
+                time in the Navy taught him many things about electronics, server maintenance, and radar systems. Much of the 
+                training he received carries over to general security principles he currently employs elsewhere. </p>
         </div><!-- card blurb div-->
     </div><!-- div 1- first element of content-->
 
@@ -38,27 +39,30 @@
         <div class="card2">
             <figure>
                 <img src ="images//cyber_security.jpg" alt ="Image reflecting cyber security.">
-                <figcaption> Cyber Security figcap</figcaption>
+                <figcaption><a href ="https://unsplash.com/photos/red-and-black-love-lock-zAhAUSdRLJ8?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash"> Cyber Security </a></figcaption>
             </figure>  
         </div><!--card 2 div-->
         <div class="card_blurb2">
-            <h2>Topic</h2>
-            <p>Card blurb Test Text Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
-                labore et dolore magna aliqua. Non curabitur gravida arcu ac tortor dignissim convallis aenean. 
-                Pharetra pharetra massa massa ultricies mi quis. Suspendisse ultrices gravida dictum fusce ut placerat
-                 orci nulla pellentesque. Pretium viverra suspendisse potenti nullam ac tortor vitae purus.</p>
+            <h2>Education</h2>
+            <p>As mentioned in the short biography, Wayne is a current student under the GI Bill pursuing a master's degree 
+                in cyber security. His ultimate goal is to be a penetration tester, but there are several more certificates 
+                and years of experience required to meet that goal. As he progresses into a highly skilled field, he is hopeful 
+                that he will earn opportunities to better his life. </p>
         </div><!-- card blurb div-->
     </div><!-- div 2- second element of content-->
     <div class="container">
         <div class = "card">
             <figure>
-                <img>
-                <figcaption></figcaption>
+                <img src = "images/keyboard.png" alt = "LED Keyboard in dark lighting.">
+                <figcaption><a href = "https://unsplash.com/photos/closeup-photography-of-mechanical-computer-keyboard-HIbAmybJHVs?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Keyboard</a></figcaption>
             </figure>
         </div><!-- .. end card -->
         <div class = "card_blurb">
-            <h2>title</h2>
-            <p>Lorem Ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <h2>Professional Gamer</h2>
+            <p>If all of life's troubles didn't require steady income to provide food and shelter, Wayne might 
+                choose a more laid back career. He has often stated that if he could make legitimate money playing
+                 video games, he would. As technology continues grow, and platforms like Twitch and YouTube continue
+                  to be popular, the idea isn't terribly far-fetched. However, dad-jokes (good or bad) may limit his audience. </p>
         </div>
     </div>
 <div id= "footer">
