Added hover to navbar links, and page titles for clarity.

--- a/about.html
+++ b/about.html
@@ -17,6 +17,9 @@
     <a href = "hobbies.html">Hobbies</a>
 </div>
 <body>
+    <div>
+        <h2 id="pageTitle">About Wayne</h2>
+    </div>
     <div class = "longText">
     <figure class = "card img"><img src ="images/portrait_wayne_brown_small.jpg" alt = "Wayne in inflatable dinosaur costume."></figure>
         <p>Wayne Brown is a married man with one child. He also happens to be my husband.
