--- a/hobbies.html
+++ b/hobbies.html
@@ -16,7 +16,11 @@
     <a href = "about.html">About</a>
     <a href = "hobbies.html">Hobbies</a>
 </div>
+
 <body>
+    <div>
+        <h2 id="pageTitle">Wayne's Hobbies</h2>
+    </div>
     <!-- Three hobbies in separate containers.Each holding a card and blurb. -->
 <div class = "container">
     <div class = "card">
